[tool.poetry]
name = "markdown-to-pdf"
version = "0.1.0"
description = ""
authors = ["William Flemmer <flemmerwill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
markdown = "^3.6"
pdfkit = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
